SIMPLE STYLE ADDED

--- a/counter/index.html
+++ b/counter/index.html
@@ -8,33 +8,36 @@
     <title>Redux Counter</title>
   </head>
   <body>
-    <div>
-      <p>
-        Clicked: <span id="value">0</span> times
-        <button id="increment">+</button>
-        <button id="decrement">-</button>
-        <br />
-        <button id="five">
-          5 click me and i will increment the value by 5
-        </button>
-        <br />
-        <button id="eight">
-          8 click me and i will increment the value by 8
-        </button>
-        <br />
-        <button id="ten">
-          10 click me and i will increment the value by 10
-        </button>
-        <br />
-        <button id="fifteen">
-          15 click me and i will increment the value by 15
-        </button>
-        <br />
-        <button id="twenty">
-          20 click me and i will increment the value by 20
-        </button>
-      </p>
-    </div>
+    <center>
+      <div>
+        <p>
+          Clicked: <span id="value">0</span> times
+          <button id="increment">+</button>
+          <button id="decrement">-</button>
+          <br />
+          <button id="five">
+            5 click me and i will increment the value by 5
+          </button>
+          <br />
+          <button id="eight">
+            8 click me and i will increment the value by 8
+          </button>
+          <br />
+          <button id="ten">
+            10 click me and i will increment the value by 10
+          </button>
+          <br />
+          <button id="fifteen">
+            15 click me and i will increment the value by 15
+          </button>
+          <br />
+
+          <button id="twenty">
+            20 click me and i will increment the value by 20
+          </button>
+        </p>
+      </div>
+    </center>
 
     <script src="./redux.js"></script>
     <script src="./main.js"></script>
